# urban-terrain-dataset

./: .gitignore  CMakeLists.txt  README.md  package.xml  vlp16packet_to_pointcloud.launch
FarmRoad/country_road/: country_road_testing.launch  country_road_training.launch
FarmRoad/greenhouse/: greenhouse.launch
UrbanCampus/ku_innovation_hall_4F/: ku_innovation_hall_4F.launch  ku_innovation_hall_4F.rviz
UrbanCampus/parking_lot/: parking_lot.launch
UrbanCampus/urban_campus/: urban_campus.launch
UrbanCampus/urban_campus_large/: urban_campus_large.launch  urban_campus_large.rviz
UrbanCampus/urban_campus_small/: urban_campus_small.launch  urban_campus_small.rviz
UrbanCampus/urban_road_camera/: urban_road_camera.launch  urban_road_camera.rviz
UrbanCampus/wheelchair_ramp/: wheelchair_ramp.launch  wheelchair_ramp2.rviz
country_road/: country_road.launch  country_road.rviz
farm_road/country_road/: country_road_testing.launch  country_road_testing.rviz  country_road_training.launch  country_road_training.rviz
greenhouse/: greenhouse.launch  greenhouse.rviz
ku_innovation_hall_4F/: ku_innovation_hall_4F.launch
launch/: VLP16_packet_to_pointcloud.launch  play_rosbag.launch
rosbag/: VLP16_packet_to_pointcloud.launch  innovation_hall_4F.launch  urban_campus_large.launch  urban_campus_small.launch
urban_campus_large/: urban_campus_large.launch
urban_campus_small/: urban_campus_small.launch
urban_road_camera/: urban_road_camera.launch  urban_road_camera.rviz
wheelchair_ramp/: wheelchair_ramp.launch  wheelchair_ramp3.rviz
(+31 files in other folders)
