<?xml version="1.0"?>
<package format="2">
  <name>ku_dataset_ros</name>
  <version>0.0.0</version>
  <description>KU TTA(Terrain Traversability Analysis) Dataset package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>